hook up chromium review queue

--- a/popup.css
+++ b/popup.css
@@ -1,9 +1,9 @@
 
-.landed {
+.landed, .closed {
     background-color: #00ee00;
 }
 
-.pending {
+.pending, .mine {
     background-color: #eeee00;
 }
 
