--- a/popup.css
+++ b/popup.css
@@ -1,10 +1,38 @@
+body {
+    font-family: sans-serif;
+}
+
+.entry-list {
+    padding-bottom: 3px;
+}
+
+.entry {
+    margin-top: -1px;
+    border: 1px solid;
+    border-radius: 2px;
+    padding-left: 2px;
+    padding-right: 2px;
+    text-decoration: none;
+    font-size: small;
+}
+
+.entry a {
+    text-decoration: none;
+}
 
 .landed, .closed {
     background-color: #00ee00;
+    border-color: #00dd00;
 }
 
 .pending, .mine {
     background-color: #eeee00;
+    border-color: #dddd00;
+}
+
+.aborted {
+    background-color: #ee0000;
+    background-color: #dd0000;
 }
 
 .author {
