sort by open/closed, then timestamp. strikethrough closed issues.

--- a/popup.css
+++ b/popup.css
@@ -25,6 +25,7 @@ body {
 .landed, .closed {
     background-color: #00ee00;
     border-color: #00dd00;
+    text-decoration: line-through;
 }
 
 .pending {
